# haskell-programming-book

./: .gitignore  README.md
chapter 18/: exercises.hs
chapter 20/: library_functions.hs
chapter06/: 6.14.hs  does_it_typecheck.md  match_the_types.md  type_kwon_do.hs
chapter07/: arith4.hs  artful_dodgy.md  case_practice.md  grab_bag.md  guard_duty.md  lets_write_code.md  multiple_choice_711.md  variety_pack.md
chapter08/: fixing_divideby.md  mccarthy_91.md  number_into_words.hs  recursion.md  review_of_types.md  reviewing_currying.md
chapter09/: Data.Char.md  PoemLines.hs  assignments.hs  bottom_madness.md  cipher.hs  comprehend_thy_lists.md  filtering.md  is_it_normal_form.md  more_bottoms.md  own_standard_functions.md  square_cube.md  the_fearful_symmetry.md  zipping.md
chapter10/: database_processing.md  rewriting_functions_using_folds.md  scans.md  understanding_folds.md  warm_up_and_review.md
chapter11/: binary_tree_foldr.md  binary_tree_to_list.md  cardinality.md  cipher.hs  dog_types.md  for_example.md  how_does_the_garden_grow.md  logic_goats.md  map_binary_tree.md  multiple_choice.md  pity_the_bool.md  the_quad.md  vehicles.md
chapter12/: check_your_understanding.md
chapter13/: assignments.hs
chapter15/exercises/exercise.hproj/: .uuid  _MaybeMonoid.hsplay  exercise.cabal
chapter16/: FunctorLaws.hs  Possibly.hs  SumFunctor.hs  be_kind.md  heavy_lifting.hs
chapter24/parsing-ini-config-files/: README.md  parsing-ini-config-files.cabal
chapter24/parsing-ini-config-files/src/: Main.hs
chapter24/parsing-ini-config-files/src/Data/: Ini.hs
(+137 files in other folders)
