name:                parsing-ini-config-files
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parsing-ini-config-files#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable parsing-ini-config-files
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , parsers
                     , raw-strings-qq
                     , bytestring
                     , hspec
                     , containers
                     , text
